# opengl_funnies

./: CMakeLists.txt
include/glad/: glad.h
resources/: fragment.glsl  vertex.glsl
src/: glad.c  main.cpp
